app/assets/stylesheets/pages/_forms.scss
// ------------- Classes -------------

.back-to-profile {
  padding: 10px 12px;
}

.forgot-password {
  color: white;

  &:hover {
    text-decoration: underline;
  }
}

.form {
  align-items: center;
  display: flex;
  justify-content: center;
  margin-top: 59px;
}

.form-control {
  border-radius: 18px;
  font-size: .9375rem;
  height: auto;
  margin-bottom: 0;
  max-width: 550px;
  min-width: 280px;
  padding: .625rem 0 0 .9375rem;
  width: 80vw;
  z-index: 1;
}

.form-large-navbar {
  margin-top: 98px;
}

.form-page {
  align-items: center;
  background: $green;
  color: white;
  display: flex;
  justify-content: center;
  height: 80vh;
  min-height: 400px;
}

.hint {
  color: white !important;
}

.link-in-text {
  font-weight: 600;

  &:hover {
    text-decoration: underline;
  }
}

.name {
  text-transform: capitalize;
}

.form-tall {
  height: 100vh;
  min-height: 700px;
}

// ------------- IDs -------------

